--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: FQJ Blog
 SEOTitle: 番茄君的博客 | FQJ Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/background1.jpg
 email: llaolaol@gmail.com
 description: "Every failure is leading towards success."
 keyword: "FQJBlog, 番茄君的博客，Product Manager"
